<?xml version="1.0"?>
<package format="2">
  <name>bspline</name>
  <version>0.0.0</version>
  <description>The bspline package</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
