<?xml version="1.0"?>
<package format="2">
    <name>bspline_opt</name>
    <version>0.0.0</version>
    <description>The bspline_opt package</description>

    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>plan_env</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>plan_env</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
