<?xml version="1.0"?>
<package format="2">
    <name>bspline_opt</name>
    <version>0.0.0</version>
    <description>The bspline_opt package</description>

    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>plan_env</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
