<?xml version="1.0"?>
<package format="2">
    <name>plan_manage</name>
    <version>0.0.0</version>
    <description>The fast_planner package</description>
    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>quadrotor_msgs</depend>
    <depend>plan_env</depend>
    <depend>path_searching</depend>
    <depend>bspline</depend>
    <depend>bspline_opt</depend>
    <depend>traj_utils</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
