<?xml version="1.0"?>
<package format="2">
    <name>poly_traj</name>
    <version>0.0.0</version>
    <description>The poly_traj package</description>
    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>

    <license>TODO</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
