<?xml version="1.0"?>
<package format="2">
    <name>traj_utils</name>
    <version>0.0.0</version>
    <description>The traj_utils package</description>

    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>bspline</build_depend>
    <build_depend>bspline_opt</build_depend>
    <build_depend>path_searching</build_depend>
    <build_depend>poly_traj</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>bspline</exec_depend>
    <exec_depend>bspline_opt</exec_depend>
    <exec_depend>path_searching</exec_depend>
    <exec_depend>poly_traj</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
