<?xml version="1.0"?>
<package format="2">
    <name>local_sensing_node</name>
    <version>0.1.0</version>
    <description>render depth from depth</description>
    <author>Matia Pizzoli</author>
    <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
    <license>GPLv3</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>svo_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>vikit_ros</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>quadrotor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>rclcpp</run_depend>
    <run_depend>svo_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>vikit_ros</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>quadrotor_msgs</run_depend>

</package>
