<?xml version="1.0"?>
<package format="2">
    <name>local_sensing_node</name>
    <version>0.1.0</version>
    <description>render depth from depth</description>
    <author>Matia Pizzoli</author>
    <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
    <license>GPLv3</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>quadrotor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>quadrotor_msgs</exec_depend>

</package>
