<?xml version="1.0"?>
<package format="2">
    <name>local_sensing_node</name>
    <version>0.1.0</version>
    <description>render depth from depth</description>
    <author>Matia Pizzoli</author>
    <maintainer email="matia.pizzoli@gmail.com">Matia Pizzoli</maintainer>
    <license>GPLv3</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>pcl_ros</depend>
    <depend>quadrotor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
