<?xml version="1.0"?>
<package format="2">
    <name>map_generator</name>
    <version>0.0.0</version>
    <description>The map_generator package</description>

    <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
