<package format="2">
    <version>0.0.0</version>
    <name>so3_control</name>
    <description>so3_control</description>
    <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
    <license>BSD</license>
    <url>http://ros.org/wiki/so3_control</url>


    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>quadrotor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>cmake_utils</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>quadrotor_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>cmake_utils</exec_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
    </export>
</package>


