<package format="2">
    <version>0.0.0</version>
    <name>so3_control</name>
    <description>so3_control</description>
    <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
    <license>BSD</license>
    <url>http://ros.org/wiki/so3_control</url>


    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>quadrotor_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
    </export>
</package>


