<package format="3">
    <description>multi_map_server</description>
    <name>multi_map_server</name>
    <version>0.0.0</version>
    <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/multi_map_server</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rosidl_default_generators</depend>

    <depend>builtin_interfaces</depend>
    <depend>rosidl_default_runtime</depend>

    <depend>visualization_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>laser_geometry</depend>
    <depend>pose_utils</depend>
    <depend>quadrotor_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
        <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp"/>
    </export>
</package>

